--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "grunt-contrib-watch": "~0.6.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-sass": "~0.7.3",
-    "grunt-contrib-cssmin": "~0.9.0"
+    "grunt-contrib-cssmin": "~0.9.0",
+    "grunt-contrib-uglify": "~0.2.7"
   }
 }
 
